# z_osmf-rs

./: .gitignore  Cargo.toml  README.md
z_osmf/: Cargo.toml  README.md
z_osmf/examples/: README.md  auth.rs  dataset_create.rs  dataset_delete.rs  dataset_list.rs  dataset_member_list.rs  dataset_read.rs  dataset_write.rs  datasets.rs  datasets_create.rs  datasets_list.rs  datasets_list_members.rs  datasets_read.rs  datasets_write.rs  files.rs  files_create.rs  files_delete.rs  files_list.rs  files_read.rs  files_write.rs  info.rs  jobs.rs  jobs_list.rs  jobs_list_files.rs  jobs_read_file.rs  jobs_status.rs  jobs_submit.rs  variables.rs  workflows.rs
z_osmf/examples/_setup/: mod.rs
z_osmf/src/: convert.rs  datasets.rs  error.rs  files.rs  if_match.rs  info.rs  jobs.rs  lib.rs  restfiles.rs  system_variables.rs  utils.rs  variables.rs  workflows.rs
z_osmf/src/datasets/: copy.rs  copy_file.rs  create.rs  delete.rs  list.rs  list_members.rs  member_list.rs  members.rs  migrate.rs  read.rs  recall.rs  rename.rs  write.rs
z_osmf/src/files/: access_control_list.rs  change_mode.rs  change_owner.rs  copy.rs  copy_dataset.rs  create.rs  delete.rs  extra_attributes.rs  link.rs  list.rs  list_tag.rs  mode.rs  owner.rs  read.rs  remove_tag.rs  rename.rs  set_tag.rs  tags.rs  unlink.rs  write.rs
z_osmf/src/files/extra_attributes/: reset.rs  set.rs
z_osmf/src/files/tags/: remove.rs  set.rs
z_osmf/src/jobs/: class.rs  feedback.rs  file_list.rs  file_read.rs  files.rs  list.rs  list_files.rs  purge.rs  read_file.rs  status.rs  submit.rs  utils.rs
z_osmf/src/jobs/files/: read.rs
z_osmf/src/system_variables/: create.rs  delete.rs  export.rs  import.rs  list.rs  symbols.rs
z_osmf/src/variables/: create.rs  delete.rs  export.rs  import.rs  list.rs  symbols.rs
z_osmf/src/workflows/: archive.rs  archived_workflows.rs  cancel.rs  create.rs  definition.rs  delete.rs  list.rs  properties.rs  start.rs
z_osmf_core/: Cargo.toml  README.md
z_osmf_core/src/: error.rs  jobs.rs  lib.rs
z_osmf_core/src/restfiles/: data_type.rs
z_osmf_macros/: Cargo.toml  README.md
z_osmf_macros/src/: endpoint.rs  getter.rs  lib.rs  utils.rs
zosmf/: Cargo.toml
zosmf/examples/: dataset_create.rs  dataset_delete.rs  dataset_list.rs  dataset_member_list.rs  dataset_read.rs  dataset_write.rs  datasets.rs  members.rs
zosmf/examples/setup/: setup.rs
zosmf/src/: data_type.rs  datasets.rs  files.rs  jobs.rs  lib.rs  utils.rs
zosmf/src/datasets/: create.rs  delete.rs  list.rs  list_members.rs  read.rs  utils.rs  write.rs
zosmf/src/datasets/members/: list.rs
zosmf/src/files/: delete.rs  list.rs  read.rs
zosmf/src/jobs/: list.rs  status.rs
zosmf_core/: Cargo.toml
zosmf_core/src/: restfiles.rs
zosmf_macros/: Cargo.toml
zosmf_macros/src/: endpoint.rs  getter.rs  lib.rs  utils.rs
