[package]
name = "z_osmf"
version = "0.5.0"
edition = "2021"
authors = ["Billy McGee <william.j.mcgee3@gmail.com>"]
description = "The Rust z/OSMF Client"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/z_osmf"
homepage = "https://crates.io/crates/z_osmf"
repository = "https://github.com/wmcgee3/z_osmf-rs"


[features]
default = ["datasets", "files", "jobs"]

datasets = []
files = []
jobs = ["dep:serde_json"]


[dependencies]
bytes = { version = "1.5", features = ["serde"] }
reqwest = { version = "0.11", default-features = false, features = [
    "cookies",
    "json",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
thiserror = "1.0"
tokio = { version = "1.32", default-features = false }

z_osmf_macros = { version = "0.4", path = "../z_osmf_macros" }


[dev-dependencies]
anyhow = "1.0"
dotenvy = "0.15"
http = "0.2"
reqwest = { version = "0.11", features = ["rustls-tls"] }
serde_test = "1.0.176"
tokio = { version = "1.32", features = ["macros", "rt-multi-thread"] }
