[package]
name = "z_osmf"
version = "0.12.0"
edition = "2021"
authors = ["Billy McGee <william.j.mcgee3@gmail.com>"]
description = "The Rust z/OSMF Client"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/z_osmf"
homepage = "https://crates.io/crates/z_osmf"
repository = "https://github.com/wmcgee3/z_osmf-rs"


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]


[features]
default = ["datasets", "files", "jobs"]

full = ["datasets", "files", "jobs", "variables"]

datasets = []
files = []
jobs = ["dep:serde_json"]

variables = []


[dependencies]
bytes = { version = "1.5", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
thiserror = "1.0"
tokio = { version = "1.32", default-features = false }

z_osmf_macros = { version = "0.10", path = "../z_osmf_macros" }


[dev-dependencies]
anyhow = "1.0"
dotenvy = "0.15"
http = "1.1"
rand = "0.8"
reqwest = { version = "0.12", features = ["rustls-tls"] }
tokio = { version = "1.32", features = ["macros", "rt-multi-thread"] }
z_osmf = { path = ".", features = ["full"] }
