[package]
name = "z_osmf"
version = "0.13.0"
edition = "2021"
authors = ["Billy McGee <william.j.mcgee3@gmail.com>"]
description = "The Rust z/OSMF Client"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/z_osmf"
homepage = "https://crates.io/crates/z_osmf"
repository = "https://github.com/wmcgee3/z_osmf-rs"


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]


[features]
default = ["datasets", "files", "jobs"]

full = ["datasets", "files", "jobs", "system-variables", "workflows"]

datasets = []
files = []
jobs = []

system-variables = []
workflows = ["jobs"]


[dependencies]
bytes = { version = "1.6", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.38", default-features = false }

z_osmf_macros = { version = "0.13", path = "../z_osmf_macros" }


[dev-dependencies]
anyhow = "1.0"
dotenvy = "0.15"
http = "1.1"
rand = "0.8"
reqwest = { version = "0.12", features = ["rustls-tls"] }
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }

z_osmf = { path = ".", features = ["full"] }
