[package]
name = "z_osmf_core"
version = "0.2.0"
edition = "2021"
authors = ["Billy McGee <william.j.mcgee3@gmail.com>"]
description = "Common components used by z_osmf and z_osmf_macros"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/z_osmf_core"
homepage = "https://crates.io/crates/z_osmf_core"
repository = "https://github.com/wmcgee3/z_osmf-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", default-features = false }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
