[package]
name = "z_osmf_macros"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/z_osmf_macros"
homepage = "https://crates.io/crates/z_osmf_macros"
repository = "https://github.com/wmcgee3/z_osmf-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
darling = "0.20"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["extra-traits", "full"] }

[lib]
proc_macro = true
