[package]
name = "z_osmf_macros"
version = "0.10.0"
edition = "2021"
authors = ["Billy McGee <william.j.mcgee3@gmail.com>"]
description = "Macros used by z_osmf"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/z_osmf_macros"
homepage = "https://crates.io/crates/z_osmf_macros"
repository = "https://github.com/wmcgee3/z_osmf-rs"


[lib]
proc_macro = true


[dependencies]
darling = "0.20"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["extra-traits", "full"] }
