[package]
name = "zosmf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["cookies", "json"] }
serde = { version = "1.0", features = ["derive"] }

zosmf_macros = { path = "../zosmf_macros" }
