[package]
name = "zosmf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["cookies", "json"] }
serde = { version = "1.0", features = ["derive"] }

zosmf_macros = { path = "../zosmf_macros" }

[dev-dependencies]
dotenvy = "0.15.7"
reqwest = { version = "0.11", features = ["rustls-tls"] }
tokio = { version = "1.32", features = ["macros", "rt-multi-thread"] }
