[package]
name = "zosmf"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0"
bytes = { version = "1.5.0", features = ["serde"] }
reqwest = { version = "0.11", default-features = false, features = [
    "cookies",
    "json",
] }
serde = { version = "1.0", features = ["derive"] }

zosmf_core = { path = "../zosmf_core" }
zosmf_macros = { path = "../zosmf_macros" }


[features]
default = ["datasets", "files", "jobs"]

datasets = []
files = []
jobs = []


[dev-dependencies]
dotenvy = "0.15"
reqwest = { version = "0.11", features = ["rustls-tls"] }
tokio = { version = "1.32", features = ["macros", "rt-multi-thread"] }
